Verbessert den Überblick.

--- a/ueberblick.tex
+++ b/ueberblick.tex
@@ -76,30 +76,15 @@
           Element $a^{-1}$, sodass gilt $a * a^{-1} = a^{-1} * a = e$
       \end{enumerate}
 
-  \item Multiplikative Gruppe modulo $p$
+  \item Beispiel: multiplikative Gruppe modulo $p$
 
-  \item Eulersche $\phi$-Funktion
-
-    Die Eulersche $\phi$-Funktion gibt für jede natürliche Zahl $n$ an, wie
-    viele zu $n$ teilerfremde Zahlen es gibt, die nicht größer als $n$ sind:
-    \begin{align*}\label{eq:euler_phi_function_definition}
-      \phi(n) & := \left|
-        \left\{
-          a \in \N \mid 1 \leq a \leq n \land \ggT(a, n) = 1
-        \right\}
-      \right|
-    \end{align*}
-
-  \item primitive Wurzeln und wie man sie findet
+  \item Erzeuger, zyklische Gruppe
 \end{itemize}
 
 \subsection*{Praxis}
 \label{sub:Praxis}
 
 \begin{itemize}
-  \item $a^b \mod n$ schnell berechnen, Square and Multiply
-  \item Berechnung vom diskreten Logarithmus (einfach und schneller – siehe
-    Babystep-Giantstep-Algorithmus)
   \item DH-Schlüsselaustausch
   \item Verschlüsselung mittels diskretem Logarithmus (was ist der öffentliche
     und der private Schlüssel?)
