Bindet Bild für DHKE in die Folien ein.

--- a/slides.tex
+++ b/slides.tex
@@ -181,6 +181,12 @@
   \end{center}
 \end{frame}
 
+\begin{frame}{\insertsubsectionhead}
+  \begin{center}
+    \includegraphics[width=\textwidth]{Diffie-Hellman-Schluesselaustausch2.png}
+  \end{center}
+\end{frame}
+
 \begin{frame}[t]{Gleichheit der beiden Schlüssel}
   Beweis: siehe Tafel
 \end{frame}
