--- a/Hannes.tex
+++ b/Hannes.tex
@@ -61,9 +61,6 @@
 
 \begin{document}
 
-\section*{Verschluesselung}
-\label{sec:Verschluesselung}
-
 Diskreter Logarithmus:
 \\\\
 source: Übersetzung aus HAC97 Seite 103
@@ -87,21 +84,21 @@ Für eine Primzahl p, eine multiplikative Gruppe $Z_p^* = \{ 0 ,\ldots , p - 1 \
 finde ${x\in N}$, $0\leq x\leq p-2$ (oder auch $1\leq x\le p-1$, zyklische Gruppe),
 so dass a hoch %$x\equiv b\mod p$.
 
-\subsection*{Diffie-Hellman-Merkle Schluesselaustausch}
-\label{sub:Diffie-Hellman-Merkle Schluesselaustausch}
+\subsection*{Diffie-Hellman-Merkle Schluesselaustausch (DHKE)}
+\label{sub:Diffie-Hellman-Merkle Schluesselaustausch (DHKE)}
 
 	Alice\\
 	1.\\
 	Wähle:	Primzahl $p$\\
 	Finde:	Erzeuger $g$:\\
 			$g^n\text{ }mod\text{ }p \rightarrow \{ 0 ,\ldots , p - 1 \}$\\
-	Wähle:	Geheimen Schlüssel: $a\in \{ 0 ,\ldots , p - 1 \}$\\
+	Wähle:	Geheimen Schlüssel: $a\in \{ 1 ,\ldots , p - 1 \}$\\
 	Berechne:	Öffentlichen Schlüssel: $A=g^a\text{ }mod\text{ }p$\\
 	Sende: (p, g, A) an Bob\\\\
 
 	Bob\\
 	2.\\
-	Wähle:	Geheimen Schlüssel: $b\in \{ 0 ,\ldots , p - 1 \}$\\
+	Wähle:	Geheimen Schlüssel: $b\in \{ 1 ,\ldots , p - 1 \}$\\
 	Berechne:	Öffentlichen Schlüssel: $B=g^b\text{ }mod\text{ }p$\\
 	Berechne:	Geheimen gemeinsamen Schlüssel: $K=A^b\text{ }mod\text{ }p$\\
 	Sende: (B) an Alice\\\\
@@ -109,7 +106,6 @@ so dass a hoch %$x\equiv b\mod p$.
 	Alice\\
 	3.\\
 	Berechne:	Geheimen gemeinsamen Schlüssel: $K=B^a\text{ }mod\text{ }p$\\
-	
 
 \begin{figure}[H]
 	\centering
@@ -117,6 +113,43 @@ so dass a hoch %$x\equiv b\mod p$.
 	\caption{Diffie-Hellman-Merkle Schluesselaustausch}
 	\label{img:grafik-dummy}
 \end{figure}
+
+\subsection*{DHKE: Beweis, Korrektheit}
+\label{sub:DHKE: Beweis, Korrektheit}
+
+\begin{center}
+\begin{tabular}{rcl}
+	$K1$	&	$=$ &	$B^a\text{ }mod\text{ }p$\\
+			&	$=$	&	$(g^b)^a\text{ }mod\text{ }p$\\
+			&	$=$	&	$g^{ba}\text{ }mod\text{ }p$\\
+			&	$=$	&	$g^{ab}\text{ }mod\text{ }p$\\
+			&	$=$	&	$(g^a)^b\text{ }mod\text{ }p$\\
+			&	$=$	&	$A^b\text{ }mod\text{ }p$\\
+			&	$=$	&	$K2$\\
+\end{tabular}
+\end{center}
+
+\subsection*{Verschluesselung}
+\label{sub:Verschluesselung}
+
+Grundsätzlich wie DHKE, wobei Bob (Sender) zusätzlich zu seinem öffentlichen Schlüssel die chiffrierte Nachricht mitsendet. Dabei kann der Empfänger (Alice)
+seinen öffentlichen Schlüssel bereits LANGE VOR der Übertragung der Nachricht bekanntgeben.\\\\
+
+Sender (Bob)\\
+Hat: öffentlichen Schlüssel des Empfängers (Alice): (p, g, A)\\
+2.	zusätzlich:\\
+	Nachricht: ${m\in \mathbb{N}^n}$ - Text der Länge $n$ auf Zahlen abbilden.\\
+	Verschlüsselung:	$c_i=A^b\cdot m_i\mod p$\\
+	Sendet:	(B, c)
+
+Empfänger (Alice)\\
+Hat: (p, g, A, a, B, c)
+3.	zusätzlich:\\
+	Entschlüsselung:	$m_i=B^{-a}\cdot c_i\mod p$\\
+	$m_i=B^{(p-1)-a}\cdot c_i\mod p$
+	
+An dieser stelle sei darauf verwiesen, dass zusätzliche Maßnahmen getroffen werden müssen, da jeder Buchstabe auf die selbe Zahl verschlüsselt wird.
+Z.B.: Mehrere Buchstaben zusammenfassen
 
 
 
