Auto stash before merge of "master" and "origin/master"
minor

--- a/Hannes.tex
+++ b/Hannes.tex
@@ -143,7 +143,7 @@ Hat: öffentlichen Schlüssel des Empfängers (Alice): (p, g, A)\\
 	Sendet:	(B, c)
 
 Empfänger (Alice)\\
-Hat: (p, g, A, a, B, c)
+Hat: (p, g, A, a, B, c)\\
 3.	zusätzlich:\\
 	Entschlüsselung:	$m_i=B^{-a}\cdot c_i\mod p$\\
 	$m_i=B^{(p-1)-a}\cdot c_i\mod p$
