Fügt Punkte beim DHKE hinzu.

--- a/slides.tex
+++ b/slides.tex
@@ -151,11 +151,11 @@
   \begin{center}
     \begin{tabularx}{\textwidth}{Xcl}
       \textbf{Alice} & & \textbf{Bob}\\\midrule
-      wähle: Primzahl $p$\\
-      finde: Erzeuger $g: g^n \mod p \to \{1, \ldots, p-1\}$\\
-      wähle geheimen Schlüssel: $a \in \{1, \ldots, p-1\}$\\
-      berechne öffentlichen Schlüssel: $A \equiv g^a \mod p$\\
-      sende: $(p, g, A)$ an Bob & $\to$
+      $\cdot$ wähle: Primzahl $p$\\
+      $\cdot$ finde: Erzeuger $g: g^n \mod p \to \{1, \ldots, p-1\}$\\
+      $\cdot$ wähle geheimen Schlüssel: $a \in \{1, \ldots, p-1\}$\\
+      $\cdot$ berechne öffentlichen Schlüssel: $A \equiv g^a \mod p$\\
+      $\cdot$ sende: $(p, g, A)$ an Bob & $\to$
     \end{tabularx}
   \end{center}
 
@@ -164,10 +164,10 @@
   \begin{center}
     \begin{tabularx}{\textwidth}{lcX}
       \textbf{Alice} &  & \textbf{Bob}\\\midrule
-      & & wähle: geheimen Schlüssel: $b\in \{ 0 ,\ldots , p - 1 \}$\\
-      & & berechne öffentlichen Schlüssel: $B = g^b \mod p$\\
-      & & berechne geheimen gemeinsamen Schlüssel: $K = A^b \mod p$\\
-      & $\leftarrow$ & sende: $B$ an Alice
+      & & $\cdot$ wähle: geheimen Schlüssel: $b\in \{ 0 ,\ldots , p - 1 \}$\\
+      & & $\cdot$ berechne öffentlichen Schlüssel: $B = g^b \mod p$\\
+      & & $\cdot$ berechne geheimen gemeinsamen Schlüssel: $K = A^b \mod p$\\
+      & $\leftarrow$ & $\cdot$ sende: $B$ an Alice
     \end{tabularx}
   \end{center}
 
