Auto stash before merge of "master" and "origin/master"
komplexität

--- a/Hannes.tex
+++ b/Hannes.tex
@@ -33,9 +33,6 @@
 \usepackage{graphicx}
 \usepackage{float}
 
-% tabelle auf textbreite
-\usepackage{tabularx}
-
 % coole Kopf- und Fußzeilen:
 \usepackage{fancyhdr}
 % Seitenstil ist natürlich fancy:
@@ -184,6 +181,24 @@ Z.B.: Mehrere Buchstaben zusammenfassen
 			&	$=$	&	$m$\\
 \end{tabular}
 \end{center}
+
+\subsection*{Komplexitaet}
+\label{sub:Komplexitaet}
+
+Diskreter Logarithmus: $DL(y, g, p) = x$ für $g^x=y\mod p$\\
+- kein direktes Verfahren: Brute Force über $\{1, \ldots, x\}\in \mathcal O(x)$\\
+- Länge von x in bit: n $\rightarrow \mathcal O(2^n)$\\\\
+
+Angenommen:\\
+- Ein Prozessor mit 10 GHz ($= 10^{10}Hz$),\\
+kann mit jedem Schritt eine modulare Potenz berechnen: $exp(x,g,p)=g^x\mod p$\\
+- Anzahl Prozessoren: $k=10^{10} \rightarrow 10^{20}$ modulare Potenzen pro Sekunde $\approx 2^{67} 1/s$\\
+- Die Zeit zur Berechnung aller modularen Potenzen: $t=2^n/(2^{67}\cdot s^{-1})$\\\\
+
+Man kann $x=2^n$ so setzen, dass $t>t_{alter des Universum}$:\\
+$t_{alter des Universum}=14\cdot 10^9y=14\cdot 10^9\cdot 365\cdot 24\cdot 60\cdot 60\cdot s\approx 2^{59}\cdot s$\\
+$59=n-67\rightarrow n=59+67\rightarrow n=126$
+
 
 
 
