Fügt Literaturangabe hinzu.

--- a/slides.tex
+++ b/slides.tex
@@ -55,6 +55,10 @@
 \section{Mathematische Grundlagen}
 \label{sec:mathematische_grundlagen}
 
+\begin{frame}{\insertsectionhead}
+  \tableofcontents[currentsection]
+\end{frame}
+
 \subsection{Kongruenz}
 \label{sub:kongruenz}
 
@@ -159,6 +163,10 @@
 
 \section{Praktische Anwendung}
 \label{sec:praktische_anwendung}
+
+\begin{frame}{\insertsectionhead}
+  \tableofcontents[currentsection]
+\end{frame}
 
 \subsection{Komplexität}
 \label{sub:komplexitat}
@@ -271,6 +279,15 @@
       $m_i \equiv B^{(p-1)-a} \cdot c_i \mod p$
     \end{tabularx}
   \end{center}
+\end{frame}
+
+\begin{frame}[t]{Literatur}
+  \begin{itemize}
+    \item Handbook of applied cryptography; Alfred J. Menezes, Paul C. van
+      Oorschot, Scott A. Vanstone; 1997; CRC Press, Inc.
+    \item A Course in Number Theory and Cryptography; Neal Koblitz; 1994;
+      Springer
+  \end{itemize}
 \end{frame}
 
 \end{document}
